src/css/base/global.less
* {
    box-sizing: border-box;

    &:focus {
        outline: 0;
    }
}

::selection {
    .colorVar(color, --bgColor, @bgColor);
    .colorVar(background-color, --primaryTextColor, @primaryTextColor);
    text-shadow: none;
}

html {
    background: none;
    font-size: calc(0.4em + 1vw);
    line-height: calc(0.5em + 1vw);
    height: 100%;
    font-family: 'mobile';

    @media @desktop {
        font-family: 'desktop';
    }
}

body {
    .colorVar(color, --primaryTextColor, @primaryTextColor);
    .colorVar(background-color, --bgColor, @bgColor);
    height: 100%;
    margin: 0;
    padding: 0;
    overflow-x: hidden;
    -ms-touch-action: auto;
    font-family: @font-main, arial;
    font-weight: @font-weight-normal;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    scroll-behavior: smooth;

    &::after {
        display: none;

        @media @desktop {
            content: 'desktop';
        }
    }
}

article {
    .clearfix();
    margin: 1rem auto 0;
    padding: 0 1rem 1rem;

    @media @desktop {
        max-width: 960px;
    }
}

section {
    .clearfix();
    margin-bottom: 2rem;

    h2 {
        border-bottom: 2px solid;
        .colorVar(border-color, --primaryTextColor, @primaryTextColor);
        padding-bottom: 0.25em;
        text-align: center;
    }
}

h1,
h2,
h3,
h4,
h5 {
    font-family: @font-header, serif;
    font-weight: @font-weight-normal;
    margin: 0 0 0.5em 0;
}

h1,
h2,
h3 {
    text-transform: uppercase;
}

h1 {
    font-style: italic;
}

p {
    hyphens: auto;
    margin: 0 0 0.6em 0;

    + p {
        text-indent: 1em;
    }
}

img,
picture {
    max-width: 100vw;
    max-height: 100vh;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */
audio,
canvas,
iframe,
img,
svg,
video {
    vertical-align: middle;
}

/*
 * Allow only vertical resizing of textareas.
 */
textarea {
    resize: vertical;
}

ul {
    margin: 0;
    padding: 0;
    list-style-position: inside;
}

a,
a:visited {
    .colorVar(color, --accentColor, @accentColor);
    outline: none;
    text-decoration: none;
}

a:hover,
a:focus {
    color: @lightPrimaryColor;
}

time {
    font-family: monospace;
}

input {
    padding: 4px 8px;
    border: 1px solid rgba(0,0,0,0.125);
    border-radius: @figure-radius;
    .colorVar(border-color, --accentColor, @accentColor);
    height: 1.75rem;
}

textarea {
    border: 1px solid rgba(0,0,0,0.125);
    border-radius: @figure-radius;
    .colorVar(border-color, --accentColor, @accentColor);
    min-height: 1.75rem;
}

select {
    border: 1px solid rgba(0,0,0,0.125);
    border-radius: @figure-radius;
    .colorVar(border-color, --accentColor, @accentColor);
    height: 1.75rem;
}

.hidden-lg {

    @media @desktop {
        display: none;
    }
}

